# jsonf

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  fpm.toml  test.sh
.github/workflows/: main.yml
app/: args.F90  jsonf.F90  main.F90
data/: bad1.json  bad2.json  in1.json  in10.json  in2.json  in3.json  in4.json  in5.json  in6.json  in7.json  in8.json  in9.json
data/errs/: bad3.json  trailing_comma.json  unexpected_char.json  unterminated_str.json
example/: basic.F90  benchmark-array.F90  benchmark-object.F90
src/: CMakeLists.txt  aoc_all.F90  args.F90  blarg.F90  c_helpers.c  gen.sh  jsonf.F90  map.F90  map_i32.F90  map_i64.F90  map_str.F90  rand.F90  rng.F90  sort.F90  utils.F90
test/: test.F90
utils/: gen_objects.py  gen_screenshots.sh
